=============
* add --enable-HDF5_1.10 configure option to explicitly enable HDF5 1.10+
  support, needed on some platforms for API compatibility 
  - contributed by Karl-Ulrich Bamberg
* skip instrumentation attempts for anonymous mmap() calls; this avoids a
  potentential deadlock condition when used with hugepages on Cray systems.
  Reported by Glenn Lockwood and Cristian Simarro.

Darshan-3.1.2
=============
* bug fix in resolving underlying call to fopen64 when using the LD_PRELOAD
  instrumentation mechanism
* bug fix to make sure Lustre module headers are installed when installing
  darshan-util
  - reported by Matthieu Dorrier

Darshan-3.1.1
=============
* bug fix to MPIIO_F_WRITE_START_TIMESTAMP, which may have produced incorrect
  timestamps in some cases
  - reported by Wucherl (William) Yoo

Darshan-3.1.0
=============
* add stdio I/O library instrumentation module (Philip Carns)
    - this handles instrumentation of file stream I/O functions
      like fopen(), fprintf(), fscanf(), etc.
    - this module also captures stats on the standard streams (stdin,
      stdout, & stderr)
* add Lustre instrumentation module (Glenn Lockwood)
    - this module provides Lustre striping details (e.g., stripe
      width, stripe size, list of OSTs a file is striped over)
* add new mmap-based logging mechanism that allows Darshan to
  generate output logs even in cases where applications don't
  call MPI_Finalize()
    - these logs are uncompressed and are per-process rather
      than per-job
* add the darshan-merge utility to darshan-util to allow per-process
  logs generated by the mmap-based logging mechanism to be converted
  into Darshan's traditional compressed per-job log files
* augment the POSIX module timestamp counters to also include a
  LAST_OPEN & FIRST_CLOSE counters to give more details on application
  I/O intervals
* avoid saving duplicate mount point entries in Darshan log files

Darshan-3.0.1
=============